# Sentinel-DCS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  README.md  SECURITY.md  pipeline_bootstrap.sh  pyproject.toml  release.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  security-codeql.yml
preregistration/: manifest_v1_1_hardened.yaml
results/: seed42_verification.json
scripts/: run_full_verification.py
