[project]
name = "sentinel-dcs"
version = "0.3.4"
description = "Preregistered black-box behavioral monitoring for LLM systems."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","N","S","W"]
ignore = ["S101"]  # allow asserts in tests

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
